--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "eventsource-parser": "^1.0.0",
+    "gpt3-tokenizer": "^1.1.5",
     "next": "13.4.2",
+    "openai": "^3.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.0-rc.1",
+    "styled-components": "^5.3.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
