--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
