--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   }
 }
