--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
+    "sharp": "^0.32.1",
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
