--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^5.3.10",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   }
 }
