--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "eventsource-parser": "^1.0.0",
+    "exifreader": "^4.12.0",
     "gpt3-tokenizer": "^1.1.5",
     "next": "13.4.4",
     "openai": "^3.2.1",
