--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "gpt3-tokenizer": "^1.1.5",
     "next": "13.4.4",
     "openai": "^3.2.1",
+    "png-chunk-text": "^1.0.0",
+    "png-chunks-extract": "^1.0.0",
+    "pngjs": "^7.0.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
