--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.4.4",
     "eventsource-parser": "^1.0.0",
     "exifreader": "^4.12.0",
+    "formidable": "^2.1.1",
     "gpt3-tokenizer": "^1.1.5",
     "next": "13.4.4",
     "openai": "^3.2.1",
