--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@types/formidable": "^2.0.6",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/uuid": "^9.0.1",
+    "@types/ws": "^8.5.5",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
