--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "13.4.4",
     "openai": "^3.2.1",
     "png-chunk-text": "^1.0.0",
+    "png-chunks-encode": "^1.0.0",
     "png-chunks-extract": "^1.0.0",
     "pngjs": "^7.0.0",
     "postcss": "8.4.24",
