--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "sharp": "^0.32.1",
     "styled-components": "^5.3.10",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
